@@ -5,6 +5,8 @@ Amarok ChangeLog
 
 VERSION 2.2.3
   FEATURES:
+    * It's now possible to automatically use a USB Mass Storage device as a collection
+      when it's connected.
     * The progress bar tooltip now shows the position in the track that the
       cursor is hovering, making it simple to jump to a specific position.
     * D-Bus: Added StopAfterCurrent method for /Player.
